--- a/views/contact.html
+++ b/views/contact.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>lenslight</title>
+      <title>vitrin</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -43,7 +43,7 @@
                  
                   <div class=" col-md-2 col-sm-3">
                      <div class="logo">
-                        <a href="index.html">lens<br><span>light</span></a>
+                        <a href="index.html">vitrin</a>
                      </div>
                   </div>
                   <div class="col-md-8 col-sm-9">
