Multiple User Pages

--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -16,7 +16,9 @@
               <li><a class="<%= link === 'photos' && 'active' %>" href="/photos">Photos</a></li>
 
 
+
               <% if (user) { %>
+                <li><a class="<%= link === 'users' && 'active' %>" href="/users">Users</a></li>
                 <li><a class="<%= link === 'dashboard' && 'active' %>" href="/users/dashboard">Dashboard</a></li>
                 <li><a href="/logout">Logout</a></li>
                 <% } else { %>
