adding new photo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -247,7 +247,7 @@
                        <figure><img src="images/team1.jpg" alt="#"/></figure>
                      </div>
                      <div class="craig">
-                       <h3>CRAIG NELSON</h3>
+                       <h3>Selina Kyle</h3>
                        <span>PHOTOGRAPHER</span>
                        <ul class="social_icon ">
                           <li><a href="Javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -263,7 +263,7 @@
                        <figure><img src="images/team2.jpg" alt="#"/></figure>
                      </div>
                      <div class="craig">
-                       <h3>JESSIE PRATT</h3>
+                       <h3>Lynda Carter</h3>
                        <span>PHOTOGRAPHER</span>
                        <ul class="social_icon ">
                           <li><a href="Javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -279,7 +279,7 @@
                        <figure><img src="images/team3.jpg" alt="#"/></figure>
                      </div>
                      <div class="craig">
-                       <h3>PRATT</h3>
+                       <h3>Rachel Dawes</h3>
                        <span>PHOTOGRAPHER</span>
                        <ul class="social_icon ">
                           <li><a href="Javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
