--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -4,7 +4,7 @@
 
       <div class=" col-md-2 col-sm-3">
         <div class="logo">
-          <a href="/">vitrin</span></a>
+          <a href="/"><span>vitrin</span></a>
         </div>
       </div>
       <div class="col-md-10">
@@ -14,6 +14,7 @@
               <li><a class="<%= link === 'index' && 'active' %>" href="/">Home</a></li>
               <li><a class="<%= link === 'about' && 'active' %>" href="/about">About</a></li>
               <li><a class="<%= link === 'photos' && 'active' %>" href="/photos">Photos</a></li>
+              <li><a class="<%= link === 'contact' && 'active' %>" href="/contact">Contact</a></li>
 
 
 
